src/core-crm/objects/Question__c/Question__c.object-meta.xml
<CustomObject>
    <description>This will store the questions that will be added against a questionnaire.</description>
    <label>Question</label>
    <nameField>
        <displayFormat>Q-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>