src/core-crm/objects/Question__c/fields/Acceptable_Response__c.field-meta.xml
<CustomField>
    <fullName>Acceptable_Response__c</fullName>
    <inlineHelpText>Please enter the acceptable response when setting-up Registration Criteria. This will restrict the learner from proceeding to registration if the response doesn’t match the acceptable response.</inlineHelpText>
    <label>Acceptable Response</label>
    <type>TextArea</type>
</CustomField>