src/core-crm/objects/Question__c/fields/Dropdown_Options__c.field-meta.xml
<CustomField>
    <fullName>Dropdown_Options__c</fullName>
    <description>This will render as picklist options when type is Picklist or Multi-Select Picklist.</description>
    <inlineHelpText>Required when type is Picklist or Multi-Select Picklist. Add all options separated semi-colon(;). Please do not add semi-colon as part of options as this will serve as separator.</inlineHelpText>
    <label>Dropdown Options</label>
    <type>TextArea</type>
</CustomField>