src/core-crm/objects/Question__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Question label that will show in questionnaire.</description>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>