src/core-crm/objects/Question__c/fields/Mandatory_Response__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Response__c</fullName>
    <description>The user cannot proceed to next process when this is true and Response doesn’t match.</description>
    <inlineHelpText>The user cannot proceed to next process when this is true and Response doesn’t match. Ex. Yes (this will mean that when the response is NOT Yes then the user can’t proceed).</inlineHelpText>
    <label>Mandatory Response</label>
    <type>TextArea</type>
</CustomField>