src/core-crm/objects/Question__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Required when Mandatory Response is populated.</description>
    <inlineHelpText>Required when Mandatory Response is populated.</inlineHelpText>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>