src/core-crm/objects/Question__c/validationRules/Dropdown_Options_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Dropdown_Options_is_required</fullName>
    <active>true</active>
    <description>Dropdown Options is required when Type is Picklist or Multi-Select Picklist</description>
    <errorConditionFormula>ISPICKVAL(Type__c, &quot;Picklist&quot;) ||  ISPICKVAL(Type__c, &quot;Multi-Select Picklist&quot;)</errorConditionFormula>
    <errorDisplayField>Dropdown_Options__c</errorDisplayField>
    <errorMessage>Dropdown Options is required when Type is Picklist or Multi-Select Picklist</errorMessage>
</ValidationRule>