src/core-crm/objects/Question__c/validationRules/Message_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Message_is_required</fullName>
    <active>true</active>
    <description>Message is required when Mandatory Response is not blank.</description>
    <errorConditionFormula>AND(
NOT( ISBLANK( Mandatory_Response__c ) ),
ISBLANK( Message__c ) 
)</errorConditionFormula>
    <errorDisplayField>Message__c</errorDisplayField>
    <errorMessage>Message is required when Mandatory Response is not blank.</errorMessage>
</ValidationRule>